[gd_scene load_steps=6 format=3 uid="uid://b0f5rdf3r7ohh"]

[ext_resource type="Script" path="res://UI/knowledge.gd" id="1_2vew1"]
[ext_resource type="Texture2D" uid="uid://vwge0frgmj7w" path="res://UI/PlayerUI/KnowledgeUiBook.png" id="1_k3wa7"]
[ext_resource type="FontFile" uid="uid://bfx3ahu82jqgo" path="res://Fonts/PressStart2P.ttf" id="2_pkkbu"]
[ext_resource type="Texture2D" uid="uid://chxcxkx4775yq" path="res://UI/Boxes&Background/DefaultTextBox.png" id="4_ye3n2"]
[ext_resource type="Texture2D" uid="uid://cjwskwi3j3dli" path="res://UI/PlayerUI/BookText.png" id="5_t1ub8"]

[node name="Knowledge" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 78.0
offset_top = 18.0
offset_right = 142.0
offset_bottom = 82.0
script = ExtResource("1_2vew1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 24.0
scale = Vector2(2, 2)
texture = ExtResource("1_k3wa7")

[node name="Number" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 41.0
offset_right = 41.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.270588, 0.584314, 0.929412, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_pkkbu")
theme_override_font_sizes/font_size = 24
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.548
anchor_top = 1.155
anchor_right = 1.647
anchor_bottom = 1.911
offset_left = -13.928
offset_top = -7.92
offset_right = -74.408
offset_bottom = -14.304
scale = Vector2(2, 2)
texture = ExtResource("4_ye3n2")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 6

[node name="RichTextLabel" type="RichTextLabel" parent="Info"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -3.0
offset_right = 230.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = 4
theme_override_constants/outline_size = 6
theme_override_fonts/normal_font = ExtResource("2_pkkbu")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "
 [center]Esse é seu   [color=CORNFLOWER_BLUE ]   conhecimento.[/color] Explore e tome as decisões corretas para conseguir mais.[/center]
"
fit_content = true
scroll_active = false

[node name="BookText" type="Sprite2D" parent="."]
position = Vector2(32, 23)
scale = Vector2(2, 2)
texture = ExtResource("5_t1ub8")
hframes = 30

[connection signal="mouse_entered" from="TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_texture_rect_mouse_exited"]
